Remove multiplier
